--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,9 +1,9 @@
-
-p, h5{
+p,
+h5 {
   text-align: justify;
 }
 
-h3{
+h3 {
   text-align: center;
 }
 
@@ -12,45 +12,42 @@ ul li::marker {
   font-size: 1.5em;
 }
 
-hr{
-  border-color:black;
+hr {
+  border-color: black;
 }
 
-h4{
+h4 {
   text-transform: uppercase;
 }
 
-#volleyball{
-  display:block;
-  margin:auto;
+#volleyball {
+  display: block;
+  margin: auto;
 }
-
 
 .el {
   margin-bottom: 2px;
   background-color: #cceeee;
-
 }
 
 .el-3 {
   background-clip: content-box, padding-box;
 }
 
-.card-title, h1 {
+.card-title,
+h1 {
   text-align: center;
 }
-.card-text{
+.card-text {
   text-align: justify;
   font-size: 1.2em;
   padding-left: 5%;
   padding-right: 5%;
 }
 
-
-.navbar{
+.navbar {
   background-color: #e3f2fd;
 }
-
 
 .gallery-wrapper {
   overflow: hidden;
@@ -60,10 +57,10 @@ h4{
   padding-bottom: 3rem;
 }
 
-.progress-bar-striped{
+.progress-bar-striped {
   width: 65%;
 }
 
-.progress{
+.progress {
   width: 90%;
 }
